# smart_records

./: AUTHORS  COPYING  Makefile.am  README.md  configure.ac
src/: Makefile  Makefile.am  Makefile.old  mysql_backend.c  mysql_backend.h  smart_records.c  smart_records.h  smart_records_internals.h
src/csv_backend/: Makefile.am  Makefile.old  csv_backend.c  csv_backend.h  csv_backend_internals.h  csv_backend_test
src/mysql_backend/: Makefile  Makefile.am  Makefile.old  mysql_backend.c  mysql_backend.h  mysql_backend_internals.h  mysql_backend_utils.c
src/udp_backend/: Makefile.am  Makefile.old  udp_backend.c  udp_backend.h  udp_backend_internals.h
